--- a/_columns/The_Big_Picture/2024-07-05.md
+++ b/_columns/The_Big_Picture/2024-07-05.md
@@ -65,6 +65,19 @@ The biggest economic data of the week comes Thursday, when the Bureau of Labor S
 Meanwhile, [a new earnings season is set to get underway](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-jpmorgan-shoots-higher-q2-earnings-report/) with a slew of big bank earnings reports. Major lenders **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)), **Citigroup** ([C](https://research.investors.com/quote.aspx?symbol=C)) and **Wells Fargo** ([WFC](https://research.investors.com/quote.aspx?symbol=WFC)) are all due to deliver quarterly results Friday.
 
 
+
+
+---
+
+
+**[Market Risks Rise, Palantir Breaks Out; Powell Looms](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-soars-palantir-breaks-out-fed-chief-powell/)**
+
+
+
+
+---
+
+
 Smell Of Success For This Stock Market Group
 --------------------------------------------
 
