--- a/_columns/The_Big_Picture/2024-07-12.md
+++ b/_columns/The_Big_Picture/2024-07-12.md
@@ -151,7 +151,7 @@ The Health Care Select Sector ETF ([XLV](https://research.investors.com/quote.as
 Granted, XLV does not serve as a useful barometer of small caps in the health care space. The top 10 holdings are chiefly large- and megacap pharmaceutical makers.
 
 
-[Friday's Inside The IBD 50 column](https://www.investors.com/stock-lists/ibd-50/health-care-stocks-ibd-50/), however, pinpoints some emerging medical and health-care innovators with market caps well below $10 billion. They include **Intra-Cellular Therapies** ([ITCI](https://research.investors.com/quote.aspx?symbol=ITCI)), **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)) and **TransMedics Group** ([TMDX](https://research.investors.com/quote.aspx?symbol=TMDX)), a pioneer in extending the lifespan of living organs for transplant surgeries.
+[Friday's Inside The IBD 50 column](https://www.investors.com/stock-lists/ibd-50/health-care-stocks-ibd-50/), however, pinpoints some emerging medical and health care innovators with market caps well below $10 billion. They include **Intra-Cellular Therapies** ([ITCI](https://research.investors.com/quote.aspx?symbol=ITCI)), **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)) and **TransMedics Group** ([TMDX](https://research.investors.com/quote.aspx?symbol=TMDX)), a pioneer in extending the lifespan of living organs for transplant surgeries.
 
 
 Keep in mind that small and micro-cap stocks can trade in hyper-volatile fashion. This means [spotting the correct entry point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) carries even greater importance.
