--- a/_columns/The_Big_Picture/2024-07-15.md
+++ b/_columns/The_Big_Picture/2024-07-15.md
@@ -149,7 +149,7 @@ More Growth Stocks To Watch
 The stock recently peaked at 283.48 and has been building a [new base.](https://www.investors.com/how-to-invest/investors-corner/investor-basics-why-learning-base-patterns-gets-the-ball-rolling/) [A potential trendline entry](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/) may unfold near 253 on a daily chart.
 
 
-The CoinDesk Bitcoin Price rose 5.9% to $63,453 and went up 10.6% over a four-day winning streak, according to Dow Jones Data. The rally marked the best four-day stretch since a 4-day 12.1% advance that ended May 5.
+The CoinDesk bitcoin price rose 5.9% to $63,453 and went up 10.6% over a four-day winning streak, according to Dow Jones Data. The rally marked the best four-day stretch since a four-day 12.1% advance that ended May 5.
 
 
 San Francisco-based Coinbase grew first-quarter sales 112% vs. a year earlier to $1.64 billion, a quarterly record. That muscular top-line increase helped feed huge earnings of $4.40 a share vs. a net loss of 34 cents in Q1 of 2023.
@@ -158,7 +158,7 @@ San Francisco-based Coinbase grew first-quarter sales 112% vs. a year earlier to
 [According to MarketSurge](https://marketsurge.investors.com/?src=A012BF), analysts on consensus see Q2 profit of 94 cents (vs. a net loss of 42 cents a year ago) and sales growing 95% to $1.38 billion. Expect Q2 results from Coinbase on Aug. 6.
 
 
-Mutual funds owning a piece of COIN has bulged from 884 in Q3 of last year to 1,257 at the end of June this year.
+The number of mutual funds owning a piece of COIN has bulged from 884 in Q3 of last year to 1,257 at the end of June this year.
 
 
 In other financial markets, the 10-year U.S. Treasury bond yield edged up four basis points to 4.22%. It's still down sharply from an April near-term peak of 4.73%.
