--- a/_columns/The_Big_Picture/2024-07-16.md
+++ b/_columns/The_Big_Picture/2024-07-16.md
@@ -132,7 +132,7 @@ In the Aerospace/Defense group, **Curtiss-Wright** ([CW](https://research.invest
 [Want To Get Quick Profits And Avoid Big Losses? Try SwingTrader](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)
 
 
-[Futures: Bullish Market Rotation Continues; 5 Stocks In Buy Zones](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rotation-asml-earnings/)
+[Tech Futures Skid On ASML, Tougher China Curbs, Trump](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-asml-earnings-china-curbs-donald-trump/)
 
 
 
