--- a/_columns/Stock_Of_the_Day/2024-07-16.md
+++ b/_columns/Stock_Of_the_Day/2024-07-16.md
@@ -30,7 +30,7 @@ Gross Profit Key Financial Metric
 While Toast has outperformed other payment stocks in 2024, shares fell on May 29 when the company hosted an investor day. Toast stock hit an intraday low of 21.32 on June 13. But bullish views on TOST stock then prevailed.
 
 
-In 2024, Toast is expected to earn 45 cents per share on an adjusted basis versus a 27 cent loss last year.
+In 2024, Toast is expected to earn 45 cents per share on an adjusted basis vs. a 9-cent adjusted profit last year and a 27-cent loss in 2022, according to FactSet data.
 
 
 For digital payments firms like Toast, gross profit is a key financial metric. That's the difference between total revenue and the cost of goods sold.
@@ -106,6 +106,9 @@ Based in Boston, the company also has U.S. offices in Chicago, Omaha, Reno, San 
 
 
 In 2020, the company rolled out Toast Capital, which provides loans to restaurants.
+
+
+*A previous version of this story included inaccurate earnings estimates for Toast in 2023 and 2022.*
 
 
 *Follow Reinhardt Krause on Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) for updates on artificial intelligence, cybersecurity and cloud computing.*
