--- a/_columns/Stock_Of_the_Day/2024-07-24.md
+++ b/_columns/Stock_Of_the_Day/2024-07-24.md
@@ -53,10 +53,10 @@ Tenet Stock
 -----------
 
 
-Tenet shares rose 5.9% to 146.92 in Tuesday afternoon [stock market action](https://www.investors.com/news/stock-market-today-stock-market-news/), gapping above a 142.35 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/).
+Tenet shares rose 4.8% to 145.34 in Wednesday [stock market action](https://www.investors.com/news/stock-market-today-stock-market-news/), gapping above a 142.35 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/).
 
 
-On Monday, THC rose 2.8%, participating in a rally sparked by [strong results from hospital giant](https://www.investors.com/news/hca-healthcare-stock-earnings-beat/) **HCA Healthcare** ([HCA](https://research.investors.com/quote.aspx?symbol=HCA)). Tenet's Monday action flashed an [early entry](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/), as THC powered clear of its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and broke a trendline sloping down from the June 12 peak.
+On Tuesday, THC rose 2.8%, participating in a rally sparked by [strong results from hospital giant](https://www.investors.com/news/hca-healthcare-stock-earnings-beat/) **HCA Healthcare** ([HCA](https://research.investors.com/quote.aspx?symbol=HCA)). Tenet's Tuesday action flashed an [early entry](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/), as THC powered clear of its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and broke a trendline sloping down from the June 12 peak.
 
 
 Still, buying ahead of earnings comes with elevated risk. IBD recommends using an [options trading strategy](https://www.investors.com/research/earnings-preview/stock-market-strategies-using-options-around-earnings-helps-minimize-risk-3/) around earnings reporting periods.
@@ -65,7 +65,7 @@ Still, buying ahead of earnings comes with elevated risk. IBD recommends using a
 [IBD Stock Checkup](https://research.investors.com/stock-checkup/) ranks Tenet as the No. 1-rated stock in the Medical-Hospitals group based on a range of fundamental and technical factors.
 
 
-HCA stock rose 4.55% on Monday, climbing back into a buy zone. **Universal Health** ([UHS](https://research.investors.com/quote.aspx?symbol=UHS)) has rallied 3.4% this week, also retaking a buy point.
+HCA stock rose 4.55% on Tuesday, climbing back into a buy zone. **Universal Health** ([UHS](https://research.investors.com/quote.aspx?symbol=UHS)) has rallied 2.85% this week, also retaking a buy point.
 
 
 Be sure to read IBD's [The Big Picture](https://www.investors.com/category/market-trend/the-big-picture/) column after each trading day to get the latest on the prevailing stock market trend and what it means for your trading decisions.
