--- a/_columns/Stock_Of_the_Day/2024-08-02.md
+++ b/_columns/Stock_Of_the_Day/2024-08-02.md
@@ -95,7 +95,7 @@ TJX Stock has a 92 Composite Rating out of a best-possible 99. The [Composite Ra
 [Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Recession Fears Grip Market; Here's What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-apple-recession-fears/)
+[How Will Market React To Nvidia AI Chip News?](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-ai-chip-delay-buffett-apple-stock/)
 
 
 
