--- a/_columns/Stock_Of_the_Day/2024-08-14.md
+++ b/_columns/Stock_Of_the_Day/2024-08-14.md
@@ -105,7 +105,7 @@ In 2025, Lewis Hamilton is set to join Ferrari. The seven-time Formula One champ
 [Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Rally Adds To Gains, Ferrari Breaks Out; New Buffett Buy Jumps](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-ferrari-buy-warren-buffett-ulta/)
+[Futures Rise As Walmart, Cisco Jump On Earnings](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-walmart-cisco-retail-sales-warren-buffett-buys-ulta/)
 
 
 
