--- a/_columns/The_Big_Picture/2024-08-14.md
+++ b/_columns/The_Big_Picture/2024-08-14.md
@@ -106,5 +106,8 @@ Bond traders are [betting more on a quarter-point rate cut](https://www.cmegroup
 [Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
 
 
+[Futures Rise As Walmart, Cisco Jump On Earnings](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-walmart-cisco-retail-sales-warren-buffett-buys-ulta/)
+
+
 
 
