--- a/_columns/The_Big_Picture/2024-08-16.md
+++ b/_columns/The_Big_Picture/2024-08-16.md
@@ -59,6 +59,22 @@ There will also be a slew of Fedspeak, with Fed Chair Jerome Powell's speech at 
 There will also be some noteworthy [earnings reports in the coming week.](https://www.investors.com/research/earnings-preview/palo-alto-stock-target-stock-retail-earnings/) These include **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)), **Workday** ([WDAY](https://research.investors.com/quote.aspx?symbol=WDAY)) and restaurant stock **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)). A slew of retailers are also due, including **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)), **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) and **Lowe's** ([LOW](https://research.investors.com/quote.aspx?symbol=LOW)).
 
 
+
+
+---
+
+
+**[Powell Due After Best Week Of 2024; Three AI Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-powell-jackson-hole-speech-nvidia-ai-stocks/)**
+
+
+
+
+---
+
+
+ 
+
+
 These Stock Market Groups Up As Gold Shines
 -------------------------------------------
 
