--- a/_columns/The_Big_Picture/2024-08-19.md
+++ b/_columns/The_Big_Picture/2024-08-19.md
@@ -91,11 +91,11 @@ At CME FedWatch, trading indicated a 77.5% probability that the U.S. central ban
 Speculation over what the Fed will do remains fever-pitched.
 
 
-In an [interview with the Wall Street Journal](https://www.wsj.com/livecoverage/stock-market-today-dow-sp500-nasdaq-live-08-19-2024/card/fed-s-kashkari-weaker-job-market-should-open-the-door-to-a-september-cut-Hk1iDUIR0gmOdRVlZgHx?mod=Searchresults_pos1&page=1), the head of the Minneapolis Federal Reserve Bank hinted that he might favor cutting rates at the upcoming Sept. 18 FOMC meeting. The reason? A sharply weakening labor market could have serious consequences for the U.S. economy.
+In an [interview with the Wall Street Journal](https://www.wsj.com/livecoverage/stock-market-today-dow-sp500-nasdaq-live-08-19-2024/card/fed-s-kashkari-weaker-job-market-should-open-the-door-to-a-september-cut-Hk1iDUIR0gmOdRVlZgHx?mod=Searchresults_pos1&page=1) Neel Kashkari, the head of the Minneapolis Federal Reserve Bank, hinted that he might favor cutting rates at the upcoming Sept. 18 FOMC meeting. The reason? A sharply weakening labor market could have serious consequences for the U.S. economy.
 
 
 
-"The balance of risks has shifted, so the debate about potentially cutting rates in September is an appropriate one to have," Neel Kashkari was quoted as saying in an interview Friday. Back in June, Kashkari had apparently leaned toward no drop in short-term rates until the end of the year.
+"The balance of risks has shifted, so the debate about potentially cutting rates in September is an appropriate one to have," Kashkari was quoted as saying in an interview Friday. Back in June, Kashkari had apparently leaned toward no drop in short-term rates until the end of the year.
 
 
 
