--- a/_columns/Swing_Trading/2024-08-16.md
+++ b/_columns/Swing_Trading/2024-08-16.md
@@ -34,7 +34,7 @@ Whenever you have an action in a market index, it's important to watch the react
 ---
 
 
-**Charles Harris has had eye-popping market returns, and some huge drawdowns. Here are some hard lessons he learned on trading psychology.**
+[**Charles Harris has had eye-popping market returns, and some huge drawdowns. Here are some hard lessons he learned on trading psychology.**](https://www.investors.com/ibd-videos/videos/these-habits-are-critical-for-keeping-conviction-in-check)
 
 
 
