--- a/_columns/The_Big_Picture/2024-08-29.md
+++ b/_columns/The_Big_Picture/2024-08-29.md
@@ -145,7 +145,7 @@ Could this have consequences for investors who prefer to focus on megacap names 
 Yet today, quarterly results indicate the law of large numbers may be catching up with many of the biggest technology leaders.
 
 
-"One major deviation from prior quarters is the weaker earnings results of the Magnificent Seven versus the average company in the S&P 500 Index," Alex Atanasiu, portfolio manager at Glenmede Investment Management just outside Philadelphia, wrote in comments emailed to IBD. "While six of these companies did beat consensus estimates, their surprises were the smallest since Q4 2022 and below the benchmark in that time frame."
+"One major deviation from prior quarters is the weaker earnings results of the Magnificent Seven versus the average company in the S&P 500 Index," Alex Atanasiu, portfolio manager at Glenmede Investment Management in Philadelphia, wrote in comments emailed to IBD. "While six of these companies did beat consensus estimates, their surprises were the smallest since Q4 2022 and below the benchmark in that time frame."
 
 
 
