--- a/_columns/The_Big_Picture/2024-09-06.md
+++ b/_columns/The_Big_Picture/2024-09-06.md
@@ -28,7 +28,7 @@ Stock Market Dip Sparks This Change
 -----------------------------------
 
 
-It wasn't just the S&P 500 and Nasdaq that got clobbered. The Dow Jones Industrial Average skidded closer to its 50-day line as it fell 1% Friday, which accounted for a fair portion of its 2.9% weekly decline.
+![](https://www.investors.com/wp-content/uploads/2024/09/MP090624-272x300.jpg)It wasn't just the S&P 500 and Nasdaq that got clobbered. The Dow Jones Industrial Average skidded closer to its 50-day line as it fell 1% Friday, which accounted for a fair portion of its 2.9% weekly decline.
 
 
 Insurance stock **Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) outperformed while **Amazon.com** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) had the toughest sessions among the Dow components.
