--- a/_columns/The_Big_Picture/2024-09-06.md
+++ b/_columns/The_Big_Picture/2024-09-06.md
@@ -62,6 +62,19 @@ First, Consumer Price Index data for August comes Wednesday, with a year-over-ye
 And while earnings season has tailed off, there are a few [noteworthy reports in the coming week](https://www.investors.com/research/earnings-preview/adobe-adbe-oracle-orcl-show-strength-earnings/). Big Tech names **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) and **Adobe** ([ADBE](https://research.investors.com/quote.aspx?symbol=ADBE)) are set to post earnings while meme stock **GameStop** ([GME](https://research.investors.com/quote.aspx?symbol=GME)) and supermarket giant **Kroger** ([KR](https://research.investors.com/quote.aspx?symbol=KR)) are also due.
 
 
+
+
+---
+
+
+**[Futures: iPhone 16 Due, Palantir Jumps On S&P 500 News](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-apple-iphone-16-palantir-dell-jump-sp-500-news-tesla-xai/)**
+
+
+
+
+---
+
+
 Broadcom Results Hurt This Stock Market Group
 ---------------------------------------------
 
