--- a/_columns/The_Big_Picture/2024-09-09.md
+++ b/_columns/The_Big_Picture/2024-09-09.md
@@ -134,6 +134,9 @@ In the same group, **American Healthcare** ([AHR](https://research.investors.com
 Outside the stock market, the yield on the 10-year benchmark U.S. government note edged down 1 basis point to 3.69%.
 
 
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090924.pdf)
+
+
 *Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
