--- a/_columns/The_Big_Picture/2024-09-13.md
+++ b/_columns/The_Big_Picture/2024-09-13.md
@@ -52,6 +52,19 @@ The stock market is looking bullish, with all major indexes now trading above th
 Earnings season has slowed to a crawl, but there are a [few noteworthy firms set to post results](https://www.investors.com/research/earnings-preview/fedex-stock-homebuilder-lennar-earnings/). **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)), homebuilder **Lennar** ([LEN](https://research.investors.com/quote.aspx?symbol=LEN)) and **General Mills** ([GIS](https://research.investors.com/quote.aspx?symbol=GIS)) are among reports to look for in the coming week. **Granite Construction** ([GVA](https://research.investors.com/quote.aspx?symbol=GVA)) and **F5** ([FFIV](https://research.investors.com/quote.aspx?symbol=FFIV)) broke out and are noteworthy watchlist candidates.
 
 
+
+
+---
+
+
+**[Tech Futures Fall On Apple iPhone 16 Orders; Fed In Focus](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-apple-iphone-16-orders-fed-rate-cut/)**
+
+
+
+
+---
+
+
 Stock Market Group Action
 -------------------------
 
