--- a/_columns/The_Big_Picture/zh-cn/2024-09-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-19.md
@@ -3,7 +3,7 @@ layout: content
 title: >-
   Dow Jones, S&P 500 Hit New Highs; 4 Leaders In Buy Zones As Breakouts Enhance Stock Market Outlook	道琼斯、标准普尔 500 指数创下新高;4 个领先企业进入买入区，突破增强股市前景
 date: 2024-09-19 17:24 -0700
-author: SCOTT LEHTONEN 斯科特·莱赫托宁
+author: SCOTT LEHTONEN
 ---
 
 
