--- a/_columns/The_Big_Picture/zh-cn/2024-09-23.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-23.md
@@ -158,7 +158,7 @@ The small cap is trying to clear a new base at 17.91. Shares have more than doub
 
 
 *Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
-*请在 X/Twitter 上关注 Chung：*@saitochung and@IBD\_DChung
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
 **YOU MIGHT ALSO LIKE: 您可能还喜欢：**
