--- a/_columns/The_Big_Picture/zh-cn/2024-09-24.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-24.md
@@ -133,8 +133,8 @@ Group peer **Texas Roadhouse** ([TXRH](https://research.investors.com/quote.aspx
 使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Nvidia Leads Five Buys With Market At Bullish Levels  
-英伟达 （Nvidia） 领先五次买入，市场处于看涨水平](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-tesla-rival-jump-buy-areas-bullishlevels/)
+[Techs, China Stocks Fall After Nvidia Leads Five New Buys  
+科技股、中国股市在 Nvidia 领投 5 只新买入后下跌](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-china-stocks-fall-nvidia-tesla-rival-in-buy-areas/)
 
 
 
