--- a/_columns/The_Big_Picture/zh-cn/2024-09-25.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-25.md
@@ -125,5 +125,9 @@ IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-cor
 IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
+[Futures Rise On Surging Micron, Fresh Chinese Stimulus Buzz  
+期货因微米飙升而上涨，中国刺激措施的新嗡嗡声](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-micron-surges-chinese-stocks-jump/)
+
+
 
 
