--- a/_columns/The_Big_Picture/2024-09-27.md
+++ b/_columns/The_Big_Picture/2024-09-27.md
@@ -52,6 +52,19 @@ But the key reading comes Friday, when the U.S. employment report is released by
 It's the tail end of the current earnings season, but there are a few [noteworthy reports due over the next week](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-nike-rallies-powerfully-ahead-of-results/). These include cruise operator **Carnival** ([CCL](https://research.investors.com/quote.aspx?symbol=CCL)), Dow Jones giant **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)), **Paychex** ([PAX](https://research.investors.com/quote.aspx?symbol=PAX)) and **Levi's** ([LEVI](https://research.investors.com/quote.aspx?symbol=LEVI)).
 
 
+
+
+---
+
+
+**[Futures Fall As China Stocks Fly; These Stocks Are Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-china-stocks-stimulus-tesla-buy-point/)**
+
+
+
+
+---
+
+
 Stock Market Sectors: Energy Shines
 -----------------------------------
 
